# ChangeLog for mail-mta/qmail
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-mta/qmail/ChangeLog,v 1.80 2006/06/17 11:34:00 hansmi Exp $

  17 Jun 2006; Michael Hanselmann <hansmi@gentoo.org> qmail-1.03-r15.ebuild,
  qmail-1.03-r16.ebuild:
  Removed unneeded restrictions, bug #136445.

  15 Jun 2006; Robin H. Johnson <robbat2@gentoo.org>
  +files/qmail-dhparam.sh, +files/tcprules.d-Makefile.qmail,
  qmail-1.03-r16.ebuild:
  Two silent changes: add a script for generating dhparam, and a Makefile for
  helping with /etc/tcprules.d/ - I meant to commit these last year ;-).

  06 May 2006; Michael Hanselmann <hansmi@gentoo.org>
  files/qmail-genrsacert.sh:
  Ignore output of renice command.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> ChangeLog:
  Fixing SHA256 digest, pass four

  27 Apr 2006; Michael Hanselmann <hansmi@gentoo.org> qmail-1.03-r15.ebuild,
  qmail-1.03-r16.ebuild:
  Fix configuration instruction as pointed out in bug 131160.

  20 Mar 2006; Michael Hanselmann <hansmi@gentoo.org> qmail-1.03-r16.ebuild:
  Don't install tcp-environ.5, see bug 127005.

  27 Feb 2006; Michael Hanselmann <hansmi@gentoo.org>
  files/digest-qmail-1.03-r15, files/digest-qmail-1.03-r16, Manifest:
  Fixed digests.

  19 Feb 2006; Michael Hanselmann <hansmi@gentoo.org> qmail-1.03-r16.ebuild:
  Stable on alpha. Should have been marked by agriffis, but wasn't. See bug
  #120923.

  30 Jan 2006; Simon Stelling <blubb@gentoo.org> qmail-1.03-r16.ebuild:
  stable on amd64

  30 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> qmail-1.03-r15.ebuild,
  qmail-1.03-r16.ebuild:
  Fixed test restriction.

  20 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  files/qmail-genrsacert.sh:
  Added sample line for renice. Thanks to Frank Schmitt for the idea.

  25 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> qmail-1.03-r16.ebuild:
  Use bindnow-flags function instead of -Wl,-z,now.
