@@ -1,6 +1,11 @@
 # ChangeLog for mail-mta/qmail
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/qmail/ChangeLog,v 1.80 2006/06/17 11:34:00 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/qmail/ChangeLog,v 1.81 2006/07/01 19:31:55 hansmi Exp $
+
+  01 Jul 2006; Michael Hanselmann <hansmi@gentoo.org>
+  -files/qmail-dhparam.sh, qmail-1.03-r16.ebuild:
+  qmail-dhparam.sh is not needed, because its functionality is in
+  qmail-genrsacert.sh already.
 
   17 Jun 2006; Michael Hanselmann <hansmi@gentoo.org> qmail-1.03-r15.ebuild,
   qmail-1.03-r16.ebuild:
